--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,8 +44,7 @@
       <footer role="contentinfo">
         <div class="wrap">
           <p>This project is maintained by <a href="{{ site.author.url }}">{{ site.author.name }}</a>.</p>
-
-          <p>Hosted on <a href="http://pages.github.com/">GitHub Pages</a>.</p>
+          <p>Build status <img src="https://codeship.com/projects/49ab25c0-ceb8-0133-7c75-664cd4c01036/status?branch=master"></p>
         </div><!--/.wrap -->
       </footer>
     </div> <!-- /.container -->
